<resources>
    <string name="app_name">MoviesDB</string>
    <string name="loading_text">"Loading..."</string>
    <string name="error_message">"There is something wrong!"</string>
    <string name="release_date">"Release date : "</string>

    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>

    <string name="cast">Cast</string>
    <string name="plot_explanation">Plot Explanation</string>
</resources>
