<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/progressBar1"
                style="@style/AVLoadingIndicatorView.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="visible"
                app:indicatorColor="@color/blue"
                app:indicatorName="LineScaleIndicator" />

            <TextView
                android:id="@+id/txt_loading"
                fontPath="fonts/Dubai-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_text"
                android:textColor="@color/blue"
                tools:ignore="MissingPrefix" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/movie_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="100dp"
                android:layout_height="150dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title_tv"
                    fontPath="fonts/Dubai-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/movie_release_date_tv"
                    fontPath="fonts/Dubai-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            fontPath="fonts/Dubai-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            tools:ignore="MissingPrefix" />

        <LinearLayout
            android:id="@+id/cast_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            fontPath="fonts/Dubai-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plot_explanation"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/plot_explanation_tv"
            fontPath="fonts/Dubai-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

</LinearLayout>